--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@supabase/supabase-js": "^2.81.1",
     "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "papaparse": "^5.5.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.4.1",
@@ -24,6 +26,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
+    "@types/papaparse": "^5.5.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
